# custos-sdk

./: .gitignore  README.md  package-lock.json  package.json
docs/: mcp-a2a-integration.md
examples/: crewai_example.py  langgraph_example.py  openai_agents_example.py  validator-loop.js
python/: README.md  pyproject.toml
python/custos_sdk/: __init__.py  client.py
src/: index.ts
